--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^5.1.3",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
+    "normalize.css": "^8.0.1",
     "prettier": "^2.6.2",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -53,5 +55,13 @@
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.17.0",
+    "eslint-plugin-react": "^7.30.0",
+    "sass": "^1.52.2",
+    "sass-loader": "^13.0.0",
+    "webpack": "^5.73.0"
   }
 }
